--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
 spec/data/test_1/fmp_text/
 spec/data/test_2/fmp_text/
 spec/data/test_3/fmp_text/
