--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ spec/data/test_1/fmp_text/
 spec/data/test_2/fmp_text/
 spec/data/test_3/fmp_text/
 spec/data/test_4/fmp_text/
+spec/data/test_5/fmp_text/
+spec/data/test_6/fmp_text/
