--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ spec/data/test_3/fmp_text/
 spec/data/test_4/fmp_text/
 spec/data/test_5/fmp_text/
 spec/data/test_6/fmp_text/
+spec/data/test_7/fmp_text/
 
 .ruby-version
 .ruby-gemset
