Fixed table,field name quoting.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ spec/data/test_5/fmp_text/
 spec/data/test_6/fmp_text/
 spec/data/test_7/fmp_text/
 spec/data/test_8/fmp_text/
+spec/data/test_9/fmp_text/
 
 .ruby-version
 .ruby-gemset
