Fixed missing chars in calcs by removing transcoding on FMPReport read.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ spec/data/test_6/fmp_text/
 spec/data/test_7/fmp_text/
 spec/data/test_8/fmp_text/
 spec/data/test_9/fmp_text/
+spec/data/test_10/fmp_text/
 
 .ruby-version
 .ruby-gemset
